force-app/main/default/objects/ssot__ClaimCoverage__dlm/fields/ssot__ClaimCoverage_ClaimId_map_Claim_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimCoverage_ClaimId_map_Claim_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimCoverage_ClaimId_map_Claim_Id_N_1</label>
    <referenceTo>ssot__Claim__dlm</referenceTo>
    <relationshipLabel>ClaimCoverage_ClaimId_map_Claim_Id_N_1</relationshipLabel>
    <relationshipName>ClaimCoverage_ClaimId_map_Claim_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>