force-app/main/default/objects/ssot__ClaimCoverage__dlm/fields/ssot__ClaimItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimItemId__c</fullName>
    <label>Claim Item</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>