force-app/main/default/objects/ssot__ClaimCoverage__dlm/fields/ssot__LossReserveAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LossReserveAmount__c</fullName>
    <label>Loss Reserve Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LossReserveAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>