force-app/main/default/objects/ssot__ClaimCoverage__dlm/fields/ssot__rel_1723128253417_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128253417_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimCoverage_ClaimParticipantId_map_rel</label>
    <referenceTo>ssot__ClaimParticipant__dlm</referenceTo>
    <relationshipLabel>ClaimCoverage_ClaimParticipantId_map_rel</relationshipLabel>
    <relationshipName>rel_1723128253417_end</relationshipName>
    <type>Lookup</type>
</CustomField>