force-app/main/default/objects/ssot__ClaimCoverage__dlm/fields/ssot__rel_1723128261197_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128261197_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimCoverage_ClaimItemId_map_ClaimI_rel</label>
    <referenceTo>ssot__ClaimItem__dlm</referenceTo>
    <relationshipLabel>ClaimCoverage_ClaimItemId_map_ClaimI_rel</relationshipLabel>
    <relationshipName>rel_1723128261197_end</relationshipName>
    <type>Lookup</type>
</CustomField>